Fix Swiper navigation button layout issue on ios

--- a/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
+++ b/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
@@ -3,6 +3,7 @@
   max-width: calc(100vw - 2rem);
   min-height: max-content;
   border-radius: 8px;
+  position: relative;
   .swiper_wrap {
     position: relative;
     height: 100%;
